@@ -1,6 +1,4 @@
-*) make the PreviewPane work w/themes
-
-  *) printing in windows can leave control characters at the end of lines
+*) printing in windows can leave control characters at the end of lines
 
 *) make there a build option for help only, so i can switch it in 
 	WebStart.
