@@ -1,3 +1,5 @@
+fixed theme support in preview pane mode.
+
 changed the way we load the sun ssl class so that pooka will work on 
 ibm's jdk 1.4.
 
